--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Socket.IO chat</title>
     <link rel="stylesheet" href="/style.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     <h1>Chat</h1>
@@ -11,6 +13,7 @@
       <label for="nick">choose a nick to register to chat</label>
       <input id="nick" name="nick" autocomplete="off" placeholder=""/>
       <button>Send</button>
+      <div id="alert"></div>
     </form>
 
     <ul id="messages"></ul>
