feature: client registers with user name

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <label for="nick">choose a nick to register to chat</label>
       <input id="nick" name="nick" autocomplete="off" placeholder=""/>
       <button>Send</button>
-      <div id="alert"></div>
+      <div id="alert" class="text-danger"></div>
     </form>
 
     <ul id="messages"></ul>
 
     <div id="message-input-area">
       <form id="msg-sender" action="">
-        <fieldset disabled>
+        <fieldset>
           <label for="msg">Send a message</label>
           <input name="msg" id="msg" autocomplete="off" /><button>Send</button>
         </fieldset>
