--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
+
     <h1>Chat</h1>
 
     <form id="register">
@@ -16,7 +17,10 @@
       <div id="alert" class="text-danger"></div>
     </form>
 
-    <ul id="messages"></ul>
+
+    <div class="col-md-12">
+      <div id="messages"></div>
+    </div>
 
     <div id="message-input-area">
       <form id="msg-sender" action="">
@@ -31,6 +35,7 @@
       <div><strong>Users online:</strong></div>
       <div id="users-online"></div>
     </div>
+
   </body>
 
   <script src="/socket.io/socket.io.js"></script>
